<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".AddProduct.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_addproduct_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addProductImage"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@color/addProductImageBackground"
            android:elevation="4dp"
            android:src="@drawable/ic_camera_alt_80px" />

        <TextView
            android:id="@+id/addProductAddImageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="@string/addProductAddImageText" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addProductProductTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/input_text_round"
            android:elevation="4dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/addProductProductText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_round"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/addProductProductHint"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                tools:text="@string/addProductProductHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addProductPriceTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/input_text_round"
            android:elevation="4dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/addProductPriceText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_round"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/addProductPriceHint"
                android:inputType="number"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                tools:text="@string/addProductPriceHint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addProductProductDescriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/input_text_round"
            android:elevation="4dp"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/addProductDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_round"
                android:fontFamily="@font/source_sans_pro_bold"
                android:hint="@string/addProductDescriptionHint"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                tools:text="@string/addProductDescriptionHint" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addProductAddButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="16dp"
            android:elevation="6dp"
            android:fontFamily="@font/source_sans_pro_bold"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:textColor="@color/backgroundColor"
            android:textSize="18sp"
            app:backgroundTint="@color/white"
            app:cornerRadius="20dp"
            tools:text="@string/addProductAddButtonLabel" />

    </LinearLayout>

</LinearLayout>


